added blends  & fixed toaster