@@ -20,21 +20,11 @@ import com.facebook.react.common.ReactConstants;
 import com.facebook.react.views.image.ReactImageView;
 import com.facebook.react.views.view.ReactViewGroup;
 
-import org.jdeferred2.Deferred;
-import org.jdeferred2.DoneCallback;
-import org.jdeferred2.DoneFilter;
-import org.jdeferred2.DonePipe;
-import org.jdeferred2.FailCallback;
-import org.jdeferred2.Promise;
-import org.jdeferred2.android.AndroidDeferredManager;
-import org.jdeferred2.impl.DeferredObject;
-import org.jdeferred2.multiple.MasterProgress;
-import org.jdeferred2.multiple.MultipleResults2;
-import org.jdeferred2.multiple.OneReject;
 import org.json.JSONException;
 import org.json.JSONObject;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -42,6 +32,7 @@ import java.util.Map;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 
+import bolts.CancellationTokenSource;
 import bolts.Continuation;
 import bolts.Task;
 import bolts.TaskCompletionSource;
@@ -55,8 +46,13 @@ public class ImageFilter extends ReactViewGroup {
   private boolean mIsReady = false;
   private int mDefaultWidth = 0;
   private int mDefaultHeight = 0;
+  private CancellationTokenSource mCancelFiltering = new CancellationTokenSource();
   private final @Nonnull Map<ReactImageView, FrescoControllerListener> mImageListeners =
     new HashMap<>();
+
+  public ImageFilter(Context context) {
+    super(context);
+  }
 
   public void setConfig(@Nullable String config) {
     try {
@@ -68,13 +64,11 @@ public class ImageFilter extends ReactViewGroup {
       );
     }
 
-    this.reset();
+    if (mIsReady) {
+      this.reset();
 
-    this.runFilterPipeline();
-  }
-
-  public ImageFilter(Context context) {
-    super(context);
+      this.runFilterPipeline();
+    }
   }
 
   @Override
@@ -86,80 +80,66 @@ public class ImageFilter extends ReactViewGroup {
     this.runFilterPipeline();
   }
 
-  private static Task<FilterableImage> createSingularImage(
+  private Task<FilterableImage> createSingularImage(
     final @Nonnull JSONObject config,
-    final @Nonnull Task<FilterableImage> prevImage,
-    final int defaultWidth,
-    final int defaultHeight
+    final @Nonnull Task<FilterableImage> prevImage
   ) throws JSONException {
-//    final long start = System.currentTimeMillis();
     final String name = config.getString("name");
 
     return prevImage
       .onSuccess(new Continuation<FilterableImage, FilterableImage>() {
         @Override
-        public FilterableImage then(Task<FilterableImage> task) throws Exception {
+        public FilterableImage then(Task<FilterableImage> task) {
           FilterableImage result = task.getResult();
           int measuredWidth = result.getImage().getMeasuredWidth();
           int measuredHeight = result.getImage().getMeasuredHeight();
-          int width = measuredWidth == 0 ? defaultWidth : measuredWidth;
-          int height = measuredHeight == 0 ? defaultHeight : measuredHeight;
+          int width = measuredWidth == 0 ? mDefaultWidth : measuredWidth;
+          int height = measuredHeight == 0 ? mDefaultHeight : measuredHeight;
 
           ArrayList<Postprocessor> postProcessors = new ArrayList<>(result.getPostProcessors());
           postProcessors.add(
             PostProcessorRegistry.getInstance().createSingular(name, width, height, config)
           );
 
-//          Log.d(ReactConstants.TAG, "ImageFilterKit: sing start->parse " + name + " " + String.valueOf(System.currentTimeMillis() - start));
-
           boolean cacheDisabled = CacheablePostProcessor.cacheDisabled(config);
 
           return new FilterableImage(result.getImage(), postProcessors, cacheDisabled);
         }
-      });
+      }, mCancelFiltering.getToken());
   }
 
-  private static Task<FilterableImage> createImageComposition(
+  private Task<FilterableImage> createImageComposition(
     final @Nonnull JSONObject config,
-    final @Nonnull Task<List<FilterableImage>> prevImage,
-    final @Nonnull Map<ReactImageView, FrescoControllerListener> imageListeners,
-    final int defaultWidth,
-    final int defaultHeight
+    final @Nonnull Task<List<FilterableImage>> prevImage
   ) throws JSONException {
     final String name = config.getString("name");
 
     return prevImage
-      .then(new DonePipe<
-        MultipleResults2<FilterableImage, FilterableImage>,
-        FilterableImage,
-        OneReject<Object>,
-        MasterProgress
-      >() {
+      .onSuccessTask(new Continuation<List<FilterableImage>, Task<FilterableImage>>() {
         @Override
-        public Promise<FilterableImage, OneReject<Object>, MasterProgress> pipeDone(
-          final MultipleResults2<FilterableImage, FilterableImage> result
-        ) {
-          final Deferred<FilterableImage, OneReject<Object>, MasterProgress> deferred =
-            new DeferredObject<>();
-          final FilterableImage dst = result.getFirst().getValue();
-          final FilterableImage src = result.getSecond().getValue();
+        public Task<FilterableImage> then(Task<List<FilterableImage>> task) {
+          final TaskCompletionSource<FilterableImage> deferred = new TaskCompletionSource<>();
+          List<FilterableImage> result = task.getResult();
+          final FilterableImage dst = result.get(0);
+          final FilterableImage src = result.get(1);
           final boolean cacheDisabled = CacheablePostProcessor.cacheDisabled(config);
 
-          ImageFilter.filterImage(src, imageListeners.get(src.getImage()))
-            .then(new DoneCallback<ReactImageView>() {
+          ImageFilter.filterImage(src, mImageListeners.get(src.getImage()))
+            .onSuccess(new Continuation<ReactImageView, Void>() {
               @Override
-              public void onDone(final ReactImageView result) {
+              public Void then(Task<ReactImageView> task) {
+                ReactImageView result = task.getResult();
+
                 if (result != null && result.getController() != null) {
                   int measuredWidth = result.getMeasuredWidth();
                   int measuredHeight = result.getMeasuredHeight();
-                  final int width = measuredWidth == 0 ? defaultWidth : measuredWidth;
-                  final int height = measuredHeight == 0 ? defaultHeight : measuredHeight;
+                  final int width = measuredWidth == 0 ? mDefaultWidth : measuredWidth;
+                  final int height = measuredHeight == 0 ? mDefaultHeight : measuredHeight;
 
-                  final CacheKey bitmapKey = ReactImageViewUtils.getCacheKey(result);
                   DataSource<CloseableReference<CloseableImage>> ds = ReactImageViewUtils
                     .getDataSource(result);
 
-                  if (ds != null && bitmapKey != null) {
+                  if (ds != null) {
                     ds.subscribe(new BaseDataSubscriber<CloseableReference<CloseableImage>>() {
                       @Override
                       protected void onNewResultImpl(
@@ -179,7 +159,7 @@ public class ImageFilter extends ReactViewGroup {
                                   height,
                                   config,
                                   ref,
-                                  bitmapKey
+                                  src.generatedCacheKey()
                                 )
                               );
 
@@ -187,20 +167,16 @@ public class ImageFilter extends ReactViewGroup {
                               CloseableReference.closeSafely(ref);
                             }
 
-                            deferred.resolve(
+                            deferred.setResult(
                               new FilterableImage(dst.getImage(), postProcessors, cacheDisabled)
                             );
 
                           } else {
-                            deferred.fail(new FailCallback<OneReject<Object>>() {
-                              @Override
-                              public void onFail(OneReject<Object> result) {
-                                Assertions.assertCondition(
-                                  false,
-                                  "ImageFilterKit: " + result.toString()
-                                );
-                              }
-                            });
+                            deferred.setError(
+                              new Exception(
+                                "ImageFilterKit: ImageFilter error: image composition - no intermediate image."
+                              )
+                            );
                           }
                         }
                       }
@@ -212,27 +188,29 @@ public class ImageFilter extends ReactViewGroup {
                         Throwable t = dataSource.getFailureCause();
 
                         if (t != null) {
-                          Log.w(ReactConstants.TAG, "ImageFilterKit: " + t.getMessage());
+                          Log.w(
+                            ReactConstants.TAG,
+                            "ImageFilterKit: ImageFilter error: " + t.getMessage()
+                          );
                         }
                       }
                     }, UiThreadImmediateExecutorService.getInstance());
                   }
                 }
-              }
-            });
 
-          return deferred.promise();
+                return null;
+              }
+            }, mCancelFiltering.getToken());
+
+          return deferred.getTask();
         }
-      });
+      }, mCancelFiltering.getToken());
   }
 
 
-  private static Task<FilterableImage> parseConfig(
+  private Task<FilterableImage> parseConfig(
     final @Nonnull Object config,
-    final @Nonnull ArrayList<ReactImageView> images,
-    final @Nonnull Map<ReactImageView, FrescoControllerListener> imageListeners,
-    final int defaultWidth,
-    final int defaultHeight
+    final @Nonnull ArrayList<ReactImageView> images
   ) throws JSONException {
     if (config instanceof Integer) {
       return Task.forResult(
@@ -247,42 +225,25 @@ public class ImageFilter extends ReactViewGroup {
     final JSONObject jsonConfig = JSONObject.class.cast(config);
     final String name = jsonConfig.getString("name");
 
-    if ("PorterDuffXfermode".equals(name)) {
+    if (PostProcessorRegistry.getInstance().isComposition(name)) {
       return createImageComposition(
         jsonConfig,
-        (new AndroidDeferredManager()).when(
-          ImageFilter.parseConfig(
-            jsonConfig.getJSONObject("dstImage").get("image"),
-            images,
-            imageListeners,
-            defaultWidth,
-            defaultHeight
-          ),
-          ImageFilter.parseConfig(
-            jsonConfig.getJSONObject("srcImage").get("image"),
-            images,
-            imageListeners,
-            defaultWidth,
-            defaultHeight
+        Task.whenAllResult(
+          Arrays.asList(
+            parseConfig(jsonConfig.getJSONObject("dstImage").get("image"), images),
+            parseConfig(jsonConfig.getJSONObject("srcImage").get("image"), images)
           )
-        ),
-        imageListeners,
-        defaultWidth,
-        defaultHeight
+        )
       );
 
-    } else {
+    } else if (PostProcessorRegistry.getInstance().isSingular(name)) {
       return createSingularImage(
         jsonConfig,
-        ImageFilter.parseConfig(
-          jsonConfig.getJSONObject("image").get("image"),
-          images,
-          imageListeners,
-          defaultWidth,
-          defaultHeight
-        ),
-        defaultWidth,
-        defaultHeight
+        parseConfig(jsonConfig.getJSONObject("image").get("image"), images)
+      );
+    } else {
+      throw new JSONException(
+        "ImageFilterKit: ImageFilter error: Can't find '" + name + "' post processor."
       );
     }
   }
@@ -308,10 +269,13 @@ public class ImageFilter extends ReactViewGroup {
   }
 
   private void reset() {
+    mCancelFiltering.cancel();
+    mImageListeners.clear();
+
     final ImageFilter self = this;
     List<ReactImageView> images = this.images();
 
-    mImageListeners.clear();
+    mCancelFiltering = new CancellationTokenSource();
 
     for (final ReactImageView image : images) {
       final ControllerListener<ImageInfo> prevListener = ReactImageViewUtils
@@ -338,7 +302,6 @@ public class ImageFilter extends ReactViewGroup {
   }
 
   private void runFilterPipeline() {
-//    final long start = System.currentTimeMillis();
     final ArrayList<ReactImageView> images = this.images();
 
     if (!mIsReady && getChildCount() > 0) {
@@ -348,7 +311,6 @@ public class ImageFilter extends ReactViewGroup {
     if (mConfig != null && images.size() > 0) {
       try {
         final ImageFilter self = this;
-//        final String name = mConfig.getString("name");
         final CacheKey auxKey = AuxCache.auxKey(mConfig, images);
 
         final FilterableImage target = AuxCache.get(auxKey);
@@ -369,29 +331,32 @@ public class ImageFilter extends ReactViewGroup {
           );
 
         } else {
-          ImageFilter.parseConfig(mConfig, images, mImageListeners, mDefaultWidth, mDefaultHeight)
-            .then(new DoneCallback<FilterableImage>() {
+          parseConfig(mConfig, images)
+            .onSuccess(new Continuation<FilterableImage, Void>() {
               @Override
-              public void onDone(final FilterableImage result) {
-//                Log.d(ReactConstants.TAG, "ImageFilterKit: start->parse " + name + " " + String.valueOf(System.currentTimeMillis() - start));
+              public Void then(Task<FilterableImage> task) {
                 if (!self.mIsReady && self.getChildCount() > 0) {
                   self.getChildAt(0).setVisibility(View.VISIBLE);
                   self.mIsReady = true;
                 }
 
+                final FilterableImage result = task.getResult();
+
                 ImageFilter.filterImage(result, mImageListeners.get(result.getImage()))
                   .onSuccess(new Continuation<ReactImageView, Void>() {
                     @Override
-                    public Void then(Task<ReactImageView> task) throws Exception {
+                    public Void then(Task<ReactImageView> task) {
                       if (!result.isCacheDisabled()) {
                         AuxCache.put(auxKey, result);
                       }
-//                      Log.d(ReactConstants.TAG, "ImageFilterKit: start->filter " + name + " " + String.valueOf(System.currentTimeMillis() - start));
+
                       return null;
                     }
-                  });
+                  }, mCancelFiltering.getToken());
+
+                return null;
               }
-            });
+            }, mCancelFiltering.getToken());
         }
 
       } catch (JSONException exc) {
